--- a/website/src/index.css
+++ b/website/src/index.css
@@ -151,6 +151,64 @@ span, a {
   animation: CurtainRocket 4s forwards ease-in-out;
 }
 
+.header-wrapper {
+  width: 100vw;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  position: fixed;
+  background-color: #090015;
+  z-index: 3;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 1000px;
+  height: 100%;
+  background-color: #090015;
+  justify-content: space-between;
+}
+
+.nav {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.nav span {
+  font-size: 12px;
+  text-decoration: none;
+  color: #eaeaea;
+  font-weight: 800;
+  font-size: 26px;
+  letter-spacing: -1px;
+  margin-top: -3px;
+  color: var(--accent-color);
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.nav span:hover{
+  color: #7070e9;
+}
+
+a {
+  text-decoration: none;
+  color: #eaeaea;
+  font-weight: 700;
+}
+
+.links{
+  width: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .homepage-wrapper {
   width: 100vw;
   display: flex;
@@ -337,8 +395,8 @@ span, a {
 }
 
 .register, .login {
-  height: 80%;
-  width: 30%;
+  height: 500px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -351,8 +409,8 @@ span, a {
 }
 
 .login {
-  height: 60%;
-  width: 28%;
+  height: 400px;
+  width: 356px;
 }
 
 .input-fields-wrapper {
@@ -369,19 +427,16 @@ span, a {
   width: 100%;
   height: 36px;
   margin-top: 10px;
-  background-color: #121827;
+  background-color: rgba(33, 17, 54, 0.0); 
   border-radius: none;
   padding: 10px;
   border-radius: 2px;
   border: none;
-  outline: 1px solid #c5c5c5;
+  border-bottom: 1px solid #ffffff;
   color: #b8b8b8;
+  position: relative;
+  outline: none;
 }
-
-.input-fields-wrapper input:focus {
-  outline: 2px solid #5c5bec;
-}
-
 
 .button-error-div {
   height: 15%;
@@ -398,7 +453,7 @@ span, a {
   margin-top: 25px;
   margin-bottom: 20px;
   height: 36px;
-  background-color:#5c5bec;
+  background-color:var(--accent-color);
   border-radius: 5px;
   border: none;
   color: #eaeaea;
